deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
      - name: my-web-app
        image: registry.redhat.io/ubi8/nginx-120 #使用 Red Hat 的 Nginx 映像
        ports:
        - containerPort: 80
