ibus-super.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibus-super
  annotations: 
spec:
  selector:
    matchLabels:
      app: ibus-super
  template:
    metadata:
      labels:
        app: ibus-super
    spec:
      containers:
      - name: ibus-super
        image: registry.devops.foxconn.com/dp/ibus_backend/ibus_superapp_webapi_release_linux:bsuper_v1.128
        resources:
          requests:
            cpu: 200m
            memory: 700Mi
          limits:
            cpu: 450m
            memory: 1G
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets: 
      - name: foxconn-secret
