ibus-super-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ibus-super
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: ibus-super
